# recipe_box_v1

./: db.sqlite3  manage.py  pyproject.toml
recipe_box_app/: admin.py  forms.py  models.py  views.py
recipe_box_app/migrations/: 0001_initial.py  0002_author_favorites.py
recipe_box_v1/: asgi.py  settings.py  urls.py  wsgi.py
templates/: authors.html  favorites.html  forbidden.html  generic_form.html  index.html  recipes.html
